--- a/admin/formProduct.html
+++ b/admin/formProduct.html
@@ -97,7 +97,7 @@
 						'<img id="preview" name-tag="picture" class="big-image" src="../assets/default/product.gif">'+
 					'</div>'+
 					'<div class="form-group">'+
-						'<input name="picture" preview-id="preview" accept="image/x-png,image/gif,image/jpeg" id="input-id" type="file" class="file form-control" data-preview-file-type="text">'+
+						'<input name="frontPicture" preview-id="preview" accept="image/x-png,image/gif,image/jpeg" id="input-id" type="file" class="file form-control" data-preview-file-type="text">'+
 					'</div>' +
 			 '</div>' +
 			 '<div class="input-frame col-md-3">'+
@@ -108,7 +108,7 @@
  						'<img id="preview" name-tag="picture" class="big-image" src="../assets/default/product.gif">'+
  					'</div>'+
  					'<div class="form-group">'+
- 						'<input name="picture" preview-id="preview" accept="image/x-png,image/gif,image/jpeg" id="input-id" type="file" class="file form-control" data-preview-file-type="text">'+
+ 						'<input name="backPicture" preview-id="preview" accept="image/x-png,image/gif,image/jpeg" id="input-id" type="file" class="file form-control" data-preview-file-type="text">'+
  					'</div>' +
  			 '</div>' +
 			 '<div class="input-frame col-md-3">'+
@@ -119,7 +119,7 @@
  						'<img id="preview" name-tag="picture" class="big-image" src="../assets/default/product.gif">'+
  					'</div>'+
  					'<div class="form-group">'+
- 						'<input name="picture" preview-id="preview" accept="image/x-png,image/gif,image/jpeg" id="input-id" type="file" class="file form-control" data-preview-file-type="text">'+
+ 						'<input name="topPicture" preview-id="preview" accept="image/x-png,image/gif,image/jpeg" id="input-id" type="file" class="file form-control" data-preview-file-type="text">'+
  					'</div>' +
  			 '</div>' +
 			 '<div class="input-frame col-md-3">'+
@@ -130,7 +130,7 @@
  						'<img id="preview" name-tag="picture" class="big-image" src="../assets/default/product.gif">'+
  					'</div>'+
  					'<div class="form-group">'+
- 						'<input name="picture" preview-id="preview" accept="image/x-png,image/gif,image/jpeg" id="input-id" type="file" class="file form-control" data-preview-file-type="text">'+
+ 						'<input name="bottomPicture" preview-id="preview" accept="image/x-png,image/gif,image/jpeg" id="input-id" type="file" class="file form-control" data-preview-file-type="text">'+
  					'</div>' +
  			 '</div>' +
 			 '<div class="input-frame col-md-3">'+
@@ -141,7 +141,7 @@
  						'<img id="preview" name-tag="picture" class="big-image" src="../assets/default/product.gif">'+
  					'</div>'+
  					'<div class="form-group">'+
- 						'<input name="picture" preview-id="preview" accept="image/x-png,image/gif,image/jpeg" id="input-id" type="file" class="file form-control" data-preview-file-type="text">'+
+ 						'<input name="leftPicture" preview-id="preview" accept="image/x-png,image/gif,image/jpeg" id="input-id" type="file" class="file form-control" data-preview-file-type="text">'+
  					'</div>' +
  			 '</div>' +
 			 '<div class="input-frame col-md-3">'+
@@ -152,7 +152,7 @@
  						'<img id="preview" name-tag="picture" class="big-image" src="../assets/default/product.gif">'+
  					'</div>'+
  					'<div class="form-group">'+
- 						'<input name="picture" preview-id="preview" accept="image/x-png,image/gif,image/jpeg" id="input-id" type="file" class="file form-control" data-preview-file-type="text">'+
+ 						'<input name="rightPicture" preview-id="preview" accept="image/x-png,image/gif,image/jpeg" id="input-id" type="file" class="file form-control" data-preview-file-type="text">'+
  					'</div>' +
  			 '</div>';
 
@@ -167,7 +167,7 @@
  						'<img id="preview" name-tag="picture" class="big-image" src="../assets/default/lookBook.gif">'+
  					'</div>'+
  					'<div class="form-group">'+
- 						'<input name="picture" preview-id="preview" accept="image/x-png,image/gif,image/jpeg" id="input-id" type="file" class="file form-control" data-preview-file-type="text">'+
+ 						'<input name="lookBook1" preview-id="preview" accept="image/x-png,image/gif,image/jpeg" id="input-id" type="file" class="file form-control" data-preview-file-type="text">'+
  					'</div>' +
  			 '</div>' +
 			 '<div class="input-frame col-md-3">'+
@@ -178,7 +178,7 @@
 						 '<img id="preview" name-tag="picture" class="big-image" src="../assets/default/lookBook.gif">'+
 					 '</div>'+
 					 '<div class="form-group">'+
-						 '<input name="picture" preview-id="preview" accept="image/x-png,image/gif,image/jpeg" id="input-id" type="file" class="file form-control" data-preview-file-type="text">'+
+						 '<input name="lookBook2" preview-id="preview" accept="image/x-png,image/gif,image/jpeg" id="input-id" type="file" class="file form-control" data-preview-file-type="text">'+
 					 '</div>' +
 				'</div>';
 
