--- a/admin/formProduct.html
+++ b/admin/formProduct.html
@@ -89,96 +89,97 @@
 			html = html +
 			'<div class="clearfix"></div>' +
 			'<hr/>' +
-			'<div class="input-frame col-md-3">'+
+			'<div class="input-frame col-md-3 col-sm-6">'+
 					'<div class="form-group">'+
 						'<label>Front angle</label>'+
 					'</div>'+
 					'<div class="form-group text-center">'+
-						'<img id="preview" name-tag="picture" class="big-image" src="../assets/default/product.gif">'+
+						'<img id="frontPicture" name-tag="frontPicture" class="big-image" src="../assets/default/product.gif">'+
 					'</div>'+
 					'<div class="form-group">'+
-						'<input name="frontPicture" preview-id="preview" accept="image/x-png,image/gif,image/jpeg" id="input-id" type="file" class="file form-control" data-preview-file-type="text">'+
+						'<input name="frontPicture" preview-id="frontPicture" accept="image/x-png,image/gif,image/jpeg" type="file" class="file form-control" data-preview-file-type="text">'+
 					'</div>' +
 			 '</div>' +
-			 '<div class="input-frame col-md-3">'+
+			 '<div class="input-frame col-md-3 col-sm-6">'+
  					'<div class="form-group">'+
  						'<label>Back angle</label>'+
  					'</div>'+
  					'<div class="form-group text-center">'+
- 						'<img id="preview" name-tag="picture" class="big-image" src="../assets/default/product.gif">'+
+ 						'<img id="backPicture" name-tag="backPicture" class="big-image" src="../assets/default/product.gif">'+
  					'</div>'+
  					'<div class="form-group">'+
- 						'<input name="backPicture" preview-id="preview" accept="image/x-png,image/gif,image/jpeg" id="input-id" type="file" class="file form-control" data-preview-file-type="text">'+
+ 						'<input name="backPicture" preview-id="backPicture" accept="image/x-png,image/gif,image/jpeg" type="file" class="file form-control" data-preview-file-type="text">'+
  					'</div>' +
  			 '</div>' +
-			 '<div class="input-frame col-md-3">'+
+			 '<div class="input-frame col-md-3 col-sm-6">'+
  					'<div class="form-group">'+
  						'<label>Top angle</label>'+
  					'</div>'+
  					'<div class="form-group text-center">'+
- 						'<img id="preview" name-tag="picture" class="big-image" src="../assets/default/product.gif">'+
+ 						'<img id="topPicture" name-tag="topPicture" class="big-image" src="../assets/default/product.gif">'+
  					'</div>'+
  					'<div class="form-group">'+
- 						'<input name="topPicture" preview-id="preview" accept="image/x-png,image/gif,image/jpeg" id="input-id" type="file" class="file form-control" data-preview-file-type="text">'+
+ 						'<input name="topPicture" preview-id="topPicture" accept="image/x-png,image/gif,image/jpeg" type="file" class="file form-control" data-preview-file-type="text">'+
  					'</div>' +
  			 '</div>' +
-			 '<div class="input-frame col-md-3">'+
+			 '<div class="input-frame col-md-3 col-sm-6">'+
  					'<div class="form-group">'+
  						'<label>Bottom angle</label>'+
  					'</div>'+
  					'<div class="form-group text-center">'+
- 						'<img id="preview" name-tag="picture" class="big-image" src="../assets/default/product.gif">'+
+ 						'<img id="bottomPicture" name-tag="bottomPicture" class="big-image" src="../assets/default/product.gif">'+
  					'</div>'+
  					'<div class="form-group">'+
- 						'<input name="bottomPicture" preview-id="preview" accept="image/x-png,image/gif,image/jpeg" id="input-id" type="file" class="file form-control" data-preview-file-type="text">'+
+ 						'<input name="bottomPicture" preview-id="bottomPicture" accept="image/x-png,image/gif,image/jpeg" type="file" class="file form-control" data-preview-file-type="text">'+
  					'</div>' +
  			 '</div>' +
-			 '<div class="input-frame col-md-3">'+
+			 '<div class="clearfix"></div>' +
+			 '<div class="input-frame col-md-3 col-sm-6">'+
  					'<div class="form-group">'+
  						'<label>Left angle</label>'+
  					'</div>'+
  					'<div class="form-group text-center">'+
- 						'<img id="preview" name-tag="picture" class="big-image" src="../assets/default/product.gif">'+
+ 						'<img id="leftPicture" name-tag="leftPicture" class="big-image" src="../assets/default/product.gif">'+
  					'</div>'+
  					'<div class="form-group">'+
- 						'<input name="leftPicture" preview-id="preview" accept="image/x-png,image/gif,image/jpeg" id="input-id" type="file" class="file form-control" data-preview-file-type="text">'+
+ 						'<input name="leftPicture" preview-id="leftPicture" accept="image/x-png,image/gif,image/jpeg" type="file" class="file form-control" data-preview-file-type="text">'+
  					'</div>' +
  			 '</div>' +
-			 '<div class="input-frame col-md-3">'+
+			 '<div class="input-frame col-md-3 col-sm-6">'+
  					'<div class="form-group">'+
  						'<label>Right angle</label>'+
  					'</div>'+
  					'<div class="form-group text-center">'+
- 						'<img id="preview" name-tag="picture" class="big-image" src="../assets/default/product.gif">'+
+ 						'<img id="rightPicture" name-tag="rightPicture" class="big-image" src="../assets/default/product.gif">'+
  					'</div>'+
  					'<div class="form-group">'+
- 						'<input name="rightPicture" preview-id="preview" accept="image/x-png,image/gif,image/jpeg" id="input-id" type="file" class="file form-control" data-preview-file-type="text">'+
+ 						'<input name="rightPicture" preview-id="rightPicture" accept="image/x-png,image/gif,image/jpeg" type="file" class="file form-control" data-preview-file-type="text">'+
  					'</div>' +
  			 '</div>';
 
 			 html = html +
 			 '<div class="clearfix"></div>'+
 			 '<hr/>' +
-			 '<div class="input-frame col-md-3">'+
+			 '<div class="input-frame col-md-3 col-sm-6">'+
  					'<div class="form-group">'+
  						'<label>Look book</label>'+
  					'</div>'+
  					'<div class="form-group text-center">'+
- 						'<img id="preview" name-tag="picture" class="big-image" src="../assets/default/lookBook.gif">'+
+ 						'<img id="lookBook1" name-tag="lookBook1" class="big-image" src="../assets/default/lookBook.gif">'+
  					'</div>'+
  					'<div class="form-group">'+
- 						'<input name="lookBook1" preview-id="preview" accept="image/x-png,image/gif,image/jpeg" id="input-id" type="file" class="file form-control" data-preview-file-type="text">'+
+ 						'<input name="lookBook1" preview-id="lookBook1" accept="image/x-png,image/gif,image/jpeg" type="file" class="file form-control" data-preview-file-type="text">'+
  					'</div>' +
  			 '</div>' +
-			 '<div class="input-frame col-md-3">'+
+			 '<div class="input-frame col-md-3 col-sm-6">'+
 					 '<div class="form-group">'+
 						 '<label>&nbsp;</label>'+
 					 '</div>'+
 					 '<div class="form-group text-center">'+
-						 '<img id="preview" name-tag="picture" class="big-image" src="../assets/default/lookBook.gif">'+
+						 '<img id="lookBook2" name-tag="lookBook2" class="big-image" src="../assets/default/lookBook.gif">'+
 					 '</div>'+
 					 '<div class="form-group">'+
-						 '<input name="lookBook2" preview-id="preview" accept="image/x-png,image/gif,image/jpeg" id="input-id" type="file" class="file form-control" data-preview-file-type="text">'+
+						 '<input name="lookBook2" preview-id="lookBook2" accept="image/x-png,image/gif,image/jpeg" type="file" class="file form-control" data-preview-file-type="text">'+
 					 '</div>' +
 				'</div>';
 
@@ -198,7 +199,7 @@
 
 				numberOnlyActivator('[name="qty"]');
 				currencyFormatActivator('[name="price"]');
-				imagePreviewActivator('[name="picture"], [name="pattern[]"]');
+				imagePreviewActivator('[preview-id]');
 
 				var oData = p_getData('operation', 'cms_storyOption');
 				$("[name=storyId]").append(dataToOptionHtml(oData.feedData));
@@ -229,7 +230,7 @@
 				}
 
 				currencyFormatChanger('[name="price"]');
-				p_formHandler('syncrom', 'updateData', 'product.html');
+				p_formHandler('syncrom', 'updateData', '');
 			}
 		</script>
 	</body>
