--- a/admin/product.html
+++ b/admin/product.html
@@ -209,7 +209,7 @@
 				var html = "";
 				for(var loop =0; loop<data.length; loop++){
 
-					data[loop].frontPicture = (data[loop].frontPicture != "") ? "../assets/products/" + data[loop].frontPicture : "";
+					data[loop].frontPicture = (data[loop].frontPicture != "") ? "../assets/products/large/" + data[loop].frontPicture : "";
 					data[loop].price  = (data[loop].price != "") ? normalFormatChanger(data[loop].price) : "0";
 
 		    		html = html +
