--- a/admin/artWork.html
+++ b/admin/artWork.html
@@ -51,14 +51,17 @@
 							'<div class="input-group operation-button">' +
 								'<a href="#" id="manageButton"><i class="fa fa-bars text-warning">&nbsp;</i> Manage ArtWork</a>'+
 							'</div>' +
-				        	'<div class="input-group pull-right">' +
-				        		'<input type="text" class="form-control" placeholder="Search">' +
-					        	'<span class="input-group-btn">' +
-					        		'<button type="button" class="search btn btn-default">SEARCH</button>' +
-					        	'</span>' +
-				        	'</div>' +
-				   		'</form>' +
-				   		'<div class="clearfix"></div>' +
+							'<div class="input-group operation-button">' +
+								'<a href="story.html"><i class="fa fa-arrow-left text-warning">&nbsp;</i> Back to Stories</a>'+
+							'</div>' +
+		        	'<div class="input-group pull-right">' +
+		        		'<input type="text" class="form-control" placeholder="Search">' +
+			        	'<span class="input-group-btn">' +
+			        		'<button type="button" class="search btn btn-default">SEARCH</button>' +
+			        	'</span>' +
+		        	'</div>' +
+		   		'</form>' +
+		   		'<div class="clearfix"></div>' +
 					'</div>' +
 					'<div class="summary-group">'+
 						'<div class="summary-text">'+
