--- a/admin/story.html
+++ b/admin/story.html
@@ -266,7 +266,7 @@
 
 				$('#manageArtwork').unbind().on("click", function(){
 					// if(checkedArray.length == 1 && checkedArray[0] != "0"){
-						window.location.href = base_url + "/admin/artWork.html?q=";
+						window.location.href = base_url + "/admin/artWork.html?q=" /*+ checkedArray[0]*/;
 					// }else{
 					// 	alert("Please choose only one record!");
 					// }
