--- a/admin/formStory.html
+++ b/admin/formStory.html
@@ -54,16 +54,11 @@
 						'</div>'+
 						'<div class="form-group">'+
 							'<label>Description</label>'+
-							'<textarea name="description" class="form-control" rows="5" id="editor"></textarea>'+
+							'<textarea name="description" class="form-control" rows="13" id="editor"></textarea>'+
 						'</div>'+
-						'<div class="form-group">'+
+						'<div class="form-group margin-top">'+
 							'<label>Author</label>'+
 							'<input name="author" type="text" class="form-control">'+
-						'</div>'+
-						'<div class="clearfix"></div>'+
-						'<div class="btn-group">'+
-							'<button class="btn btn-warning" type="submit">Create</button>'+
-							'<a href="story.html" class="btn btn-warning" type="reset">Cancel</a>'+
 						'</div>'+
 					'</div>' +
 					'<div class="input-frame col-md-6">'+
@@ -71,12 +66,21 @@
 							'<label>Story Image</label>'+
 						'</div>'+
 						'<div class="form-group text-center">'+
-							'<img id="preview" name-tag="picture" class="medium-image border" src="../assets/default/story.gif">'+
+							'<img id="preview" name-tag="picture" class="big-image border" src="../assets/default/story.gif">'+
 						'</div>'+
 						'<div class="form-group">'+
+							'<label>Browse</label>'+
 							'<input name="picture" preview-id="preview" accept="image/x-png,image/gif,image/jpeg" id="input-id" type="file" class="file form-control" data-preview-file-type="text">'+
 						'</div>' +
 					'</div>' +
+					'<div class="clearfix"></div>'+
+					'<hr/>' +
+					'<div class="input-frame col-md-6">'+
+						'<div class="btn-group">'+
+							'<button class="btn btn-warning" type="submit">Create</button>'+
+							'<a href="story.html" class="btn btn-warning" type="reset">Cancel</a>'+
+						'</div>'+
+					'</div>'+
 				'</form>';
 
 				$('main.parent-admin .main-content').append(html);
@@ -89,7 +93,7 @@
 				imagePreviewActivator('[name="picture"]');
 
 				// //textarea editor
-				new nicEditor({iconsPath : '../assets/PICS/nicEditorIcons.gif', maxHeight : 200}).panelInstance('editor');
+				new nicEditor({iconsPath : '../assets/PICS/nicEditorIcons.gif', maxHeight : 800}).panelInstance('editor');
 
 				$(".nicEdit-main").on("blur",function(){
 					$("[name='description']").val($(this).html());
