--- a/admin/productsVariant.html
+++ b/admin/productsVariant.html
@@ -223,6 +223,7 @@
 						'<hr/>' +
 	    			'<p class="text-center">'+ ((data[loop].artwork!=null) ? data[loop].artwork : '<b>- NO ARTWORK -</b>') +'</p>'+
 	    			'<p class="text-center">'+ ((data[loop].color!=null) ? data[loop].color : '<b>- NO COLOR -</b>') +'</p>'+
+						'<p class="text-center">'+ ((data[loop].size!='NULL') ? data[loop].size : '<b>- NO SIZE -</b>') +'</p>'+
 	    			'<p class="text-center">Remaining : '+ data[loop].qty +'</p>'+
 	    			// '<p class="text-center">'+ currencyFormat(String(data[loop].price)) +'</p>'+
 	    		'</div>';
