--- a/admin/orderItems.html
+++ b/admin/orderItems.html
@@ -33,57 +33,41 @@
 		<!-- page script -->
 		<script type="text/javascript">
 			$(function(){
-				customer();
+				loadData();
 			});
-			function customer(){
+			function loadData(){
 				var html = '';
-
-				var data =
-				{
-					list : [
-						{ orderNo: "1141", customer: 'Achdiyati Sumi', status: 'Waiting for payment', total: '10000000', orderTime: '2017/10/21 12:00:00' },
-						{ orderNo: "2444", customer: 'Achdiyati Sumi', status: 'Delivered', total: '20500000', orderTime: '2017/10/19 12:00:00' },
-						{ orderNo: "3123", customer: 'Guest', status: 'Paid', total: '3500000', orderTime: '2017/10/13 12:00:00' },
-						{ orderNo: "4123", customer: 'Guest', status: 'Complete', total: '2200000', orderTime: '2017/10/11 12:00:00' },
-						{ orderNo: "5432", customer: 'Guest', status: 'Complete', total: '4150000', orderTime: '2017/10/9 12:00:00' },
-					],
-
-					registered : '2',
-					guest : '3',
-				};
+				/* get ID */
+				var id = "";
+				var link = "";
+				if(getParam('q') != "" && getParam('q') != null) {
+					id 	 = getParam('q');
+					link = '?s=' + getParam('q');
+				}else{
+					window.location.href = base_url + "/admin/orders.html";
+				}
 
 				html = html +
 				'<div class="header-option">' +
 					'<div class="operation-group">'+
 						'<form class="form-inline">' +
 							'<div class="input-group operation-button">' +
-								'<a href="#"><i class="fa fa-minus-circle text-warning">&nbsp;</i> Delete Order</a>'+
+								'<a href="orders.html"><i class="fa fa-arrow-left text-warning">&nbsp;</i> Back to Orders</a>'+
 							'</div>' +
-							'<div class="input-group operation-button">' +
-								'<a href="#"><i class="fa fa-check-circle text-warning">&nbsp;</i> Process Order</a>'+
-							'</div>' +
-				        	'<div class="input-group pull-right search-box">' +
-				        		'<input type="text" class="form-control" placeholder="Search">' +
-					        	'<span class="input-group-btn">' +
-					        		'<button type="submit" class="btn btn-default">SEARCH</button>' +
-					        	'</span>' +
-				        	'</div>' +
-				   		'</form>' +
-				   		'<div class="clearfix"></div>' +
+		        	'<div class="input-group pull-right">' +
+		        		'<input type="text" class="form-control" placeholder="Search">' +
+			        	'<span class="input-group-btn">' +
+			        		'<button type="button" class="search btn btn-default">SEARCH</button>' +
+			        	'</span>' +
+		        	'</div>' +
+			   		'</form>' +
+			   		'<div class="clearfix"></div>' +
 					'</div>' +
 					'<div class="summary-group">'+
 						'<div class="summary-text">'+
-							'<p>Total number of orders</p>'+
-							'<p class="number">' + data.list.length + '</p>'+
+							'<p>Total number of items</p>'+
+							'<p class="number" id="totalRecord">0</p>'+
 						'</div>'+
-						'<div class="summary-text">'+
-							'<p>Unpaid</p>'+
-							'<p class="number">' + data.registered + '</p>'+
-						'</div>'+
-						// '<div class="summary-text">'+
-						// 	'<p>Guest</p>'+
-						// 	'<p class="number">' + data.guest + '</p>'+
-						// '</div>'+
 						'<div class="alpha">'+
 							'<ul>' +
 								'<li><a href="#">A</a></li>'+
@@ -122,31 +106,12 @@
 					'<table class="table table-striped table-responsive">'+
 					    '<thead>'+
 					    	'<tr>'+
-						    	'<th width="5%"><input type="checkbox" id="selectRecord" onclick="checkboxToggle(this, \'customerSelect\')" /><label for="selectRecord"></label></th>'+
-						    	'<th>Order #</th>'+
-						        '<th>Customer</th>'+
-						        '<th>Status</th>'+
-						        '<th class="text-center">Total</th>'+
-						        '<th class="text-center">Order time</th>'+
+									'<th width="70%">Item</th>'+
+						      '<th class="text-center">Price</th>'+
+						      '<th class="text-center">Qty</th>'+
 					    	'</tr>'+
 					    '</thead>'+
-					    '<tbody>';
-
-		    	data = data.list;
-		    	for(var loop =0; loop<data.length; loop++){
-		    		html = html +
-		    		'<tr>'+
-		    			'<td><input type="checkbox" name="customerSelect" value="'+data[loop].orderNo+'" id="selectRecord' + loop + '"><label for="selectRecord' + loop + '"></label></td>'+
-		    			'<td class="syn-nowrap">'+ data[loop].orderNo +'</td>'+
-		    			'<td>'+ data[loop].customer +'</td>'+
-		    			'<td>'+ data[loop].status +'</td>'+
-		    			'<td class="syn-nowrap text-right">'+ currencyFormat(data[loop].total) +'</td>'+
-		    			'<td class="text-center">'+ timeSince(new Date(Date.parse(data[loop].orderTime))) +'</td>'+
-		    		'</tr>';
-		    	}
-
-				html = html +
-					    '</tbody>'+
+					    '<tbody></tbody>'+
 					'</table>'+
 				'</div>';
 
@@ -184,11 +149,93 @@
 					'</div>'+
 				'</div>';
 
-				// html = html + '</div>';
 				$('main.parent-admin .main-content').append(html);
+
+				r_setCookie('adminPageFilter', '1');
+				r_setCookie('adminAlphaFilter', '');
+				var page = (r_getCookie('adminPageFilter') != "" ? r_getCookie('adminPageFilter'): "1");
+				var data = p_getData('order', 'orderItems', page, 'orderId = "' + id + '"');
+					  data = data.feedData;
+
+				dataGenerator(data);
+
+				//filter
+				$('.alpha a').on("click", function(){
+					var page = (r_getCookie('adminPageFilter') != "" ? r_getCookie('adminPageFilter'): "1");
+					var data = p_getData('order', 'orderItems', page, 'orderId = "' + id + '" AND ' + '(name LIKE "' + $(this).html() + '%")');
+					data = data.feedData;
+					dataGenerator(data);
+
+					r_setCookie('adminPageFilter', page);
+					r_setCookie('adminAlphaFilter', $(this).html());
+				});
+
+				$('button.search').on("click", function(){
+					var keyword = $("[placeholder='Search']").val();
+					var data = p_getData('order', 'orderItems', '1', 'orderId = "' + id + '" AND ' + '(name LIKE "%' + keyword + '%")');
+					data = data.feedData;
+					dataGenerator(data);
+				});
+
+				//filter end
+
+				//paging
+				$('.pagging-text .pagging-right').on("click", function(){
+					var page = (r_getCookie('adminPageFilter') != "" ? r_getCookie('adminPageFilter'): "1");
+					page = parseInt(page) + 1;
+
+					var keyword = $("[placeholder='Search']").val();
+					var alpha = (r_getCookie('adminAlphaFilter') != "" ? '(name LIKE "' + r_getCookie('adminAlphaFilter') + '%") AND ': "");
+
+					var data = p_getData('order', 'orderItems', page, alpha + 'orderId = "' + id + '" AND ' + '(name LIKE "%' + keyword + '%")');
+					data = data.feedData;
+
+					if(data.length > 0){ dataGenerator(data); } else { page = parseInt(page) - 1; }
+
+					r_setCookie('adminPageFilter', page);
+				});
+
+				$('.pagging-text .pagging-left').on("click", function(){
+					var page = (r_getCookie('adminPageFilter') != "" ? r_getCookie('adminPageFilter'): "1");
+					if(page > 1){
+						page = parseInt(page) - 1;
+
+						var keyword = $("[placeholder='Search']").val();
+						var data = p_getData('order', 'orderItems', page, 'orderId = "' + id + '" AND ' + '(name LIKE "%' + keyword + '%")');
+						data = data.feedData;
+						dataGenerator(data);
+
+						r_setCookie('adminPageFilter', page);
+					}
+				});
+				//paging end
 			}
 
+			function dataGenerator(data){
+				var html = "";
+				var unpaidCounter = 0;
+				for(var loop =0; loop<data.length; loop++){
+		    		html = html +
+		    		'<tr>'+
+		    			'<td class="syn-nowrap">'+ data[loop].name +'</td>'+
+							'<td class="text-right">'+ currencyFormat(String(data[loop].price)) +'</td>'+
+		    			'<td class="text-center">'+ data[loop].qty +'</td>'+
+		    		'</tr>';
 
+		    		if(data[loop].status == "Waiting for payment") unpaidCounter++;
+		    	}
+
+				$('main.parent-admin table tbody').html('').append(html);
+				$('main.parent-admin #totalRecord').html(data.length);
+
+				//activator
+				// checkboxActivator();
+				// operationActivator();
+			}
+
+			function operationActivator(){
+
+			}
 		</script>
 	</body>
 </html>
