--- a/admin/orders.html
+++ b/admin/orders.html
@@ -37,21 +37,19 @@
 			});
 			function loadData(){
 				var html = '';
+
 				html = html +
 				'<div class="header-option">' +
 					'<div class="operation-group">'+
 						'<form class="form-inline">' +
+							// '<div class="input-group operation-button">' +
+							// 	'<a href="#" id="deleteButton"><i class="fa fa-minus-circle text-warning">&nbsp;</i> Delete Orders</a>'+
+							// '</div>' +
 							'<div class="input-group operation-button">' +
-								'<a href="formHome.html"><i class="fa fa-plus-circle text-warning">&nbsp;</i> Add Home Picture</a>'+
+								'<a href="#" id="detailButton"><i class="fa fa-search text-warning">&nbsp;</i> Detail orders</a>'+
 							'</div>' +
 							'<div class="input-group operation-button">' +
-								'<a href="#" id="deleteButton"><i class="fa fa-minus-circle text-warning">&nbsp;</i> Delete Home Picture</a>'+
-							'</div>' +
-							'<div class="input-group operation-button">' +
-								'<a href="#" id="manageButton"><i class="fa fa-bars text-warning">&nbsp;</i> Manage Home Picture</a>'+
-							'</div>' +
-							'<div class="input-group operation-button">' +
-								'<a href="#" id=""><i class="fa fa-gear text-warning">&nbsp;</i> Home Setting</a>'+
+								'<a href="#" id="processButton"><i class="fa fa-check-circle text-warning">&nbsp;</i> Process orders</a>'+
 							'</div>' +
 		        	'<div class="input-group pull-right">' +
 		        		'<input type="text" class="form-control" placeholder="Search">' +
@@ -59,14 +57,22 @@
 			        		'<button type="button" class="search btn btn-default">SEARCH</button>' +
 			        	'</span>' +
 		        	'</div>' +
-		   		'</form>' +
-		   		'<div class="clearfix"></div>' +
+			   		'</form>' +
+			   		'<div class="clearfix"></div>' +
 					'</div>' +
 					'<div class="summary-group">'+
 						'<div class="summary-text">'+
-							'<p>Total number of Pictures</p>'+
+							'<p>Total number of orders</p>'+
 							'<p class="number" id="totalRecord">0</p>'+
 						'</div>'+
+						'<div class="summary-text">'+
+							'<p>Unpaid</p>'+
+							'<p class="number" id="totalUnpaid">0</p>'+
+						'</div>'+
+						// '<div class="summary-text">'+
+						// 	'<p>Guest</p>'+
+						// 	'<p class="number" id="totalGuest">0</p>'+
+						// '</div>'+
 						'<div class="alpha">'+
 							'<ul>' +
 								'<li><a href="#">A</a></li>'+
@@ -105,12 +111,12 @@
 					'<table class="table table-striped table-responsive">'+
 					    '<thead>'+
 					    	'<tr>'+
-						    	'<th width="5%"><input type="checkbox" value="1" id="selectRecord" onclick="checkboxToggle(this, \'customerSelect\')" /><label for="selectRecord"></label></th>'+
-						        '<th width="10%" class="text-center"><span class="fa fa-picture-o"></span></th>'+
-						        '<th>Title</th>'+
-						        '<th width="30%">Description</th>'+
-						        '<th>By</th>'+
-						        '<th>Time</th>'+
+						    	'<th width="5%"><input type="checkbox" name="customerSelect" id="selectRecord" value="0" onclick="checkboxToggle(this, \'customerSelect\')" /><label for="selectRecord"></label></th>'+
+									'<th>Order #</th>'+
+						      '<th>Customer</th>'+
+						      '<th>Status</th>'+
+						      '<th class="text-center">Total</th>'+
+						      '<th class="text-center">Order time</th>'+
 					    	'</tr>'+
 					    '</thead>'+
 					    '<tbody></tbody>'+
@@ -156,15 +162,15 @@
 				r_setCookie('adminPageFilter', '1');
 				r_setCookie('adminAlphaFilter', '');
 				var page = (r_getCookie('adminPageFilter') != "" ? r_getCookie('adminPageFilter'): "1");
-				var data = p_getData('operation', 'cms_home', page);
-					data = data.feedData;
+				var data = p_getData('order', 'orders', page);
+					  data = data.feedData;
 
 				dataGenerator(data);
 
 				//filter
 				$('.alpha a').on("click", function(){
 					var page = (r_getCookie('adminPageFilter') != "" ? r_getCookie('adminPageFilter'): "1");
-					var data = p_getData('operation', 'cms_home', page, '(title LIKE "' + $(this).html() + '%")');
+					var data = p_getData('order', 'orders', page, '(name LIKE "' + $(this).html() + '%")');
 					data = data.feedData;
 					dataGenerator(data);
 
@@ -174,7 +180,7 @@
 
 				$('button.search').on("click", function(){
 					var keyword = $("[placeholder='Search']").val();
-					var data = p_getData('operation', 'cms_home', '1', '(title LIKE "%' + keyword + '%")');
+					var data = p_getData('order', 'orders', '1', '(name LIKE "%' + keyword + '%")');
 					data = data.feedData;
 					dataGenerator(data);
 				});
@@ -187,9 +193,9 @@
 					page = parseInt(page) + 1;
 
 					var keyword = $("[placeholder='Search']").val();
-					var alpha = (r_getCookie('adminAlphaFilter') != "" ? '(title LIKE "' + r_getCookie('adminAlphaFilter') + '%") AND ': "");
+					var alpha = (r_getCookie('adminAlphaFilter') != "" ? '(name LIKE "' + r_getCookie('adminAlphaFilter') + '%") AND ': "");
 
-					var data = p_getData('operation', 'cms_home', page, alpha + '(title LIKE "%' + keyword + '%")');
+					var data = p_getData('order', 'orders', page, alpha + '(name LIKE "%' + keyword + '%")');
 					data = data.feedData;
 
 					if(data.length > 0){ dataGenerator(data); } else { page = parseInt(page) - 1; }
@@ -203,7 +209,7 @@
 						page = parseInt(page) - 1;
 
 						var keyword = $("[placeholder='Search']").val();
-						var data = p_getData('operation', 'cms_home', page, '(title LIKE "%' + keyword + '%")');
+						var data = p_getData('order', 'orders', page, '(name LIKE "%' + keyword + '%")');
 						data = data.feedData;
 						dataGenerator(data);
 
@@ -215,20 +221,25 @@
 
 			function dataGenerator(data){
 				var html = "";
+				var unpaidCounter = 0;
 				for(var loop =0; loop<data.length; loop++){
 		    		html = html +
 		    		'<tr>'+
 		    			'<td><input type="checkbox" name="customerSelect" value="'+data[loop].idData+'" id="selectRecord' + loop + '"><label for="selectRecord' + loop + '"></label></td>'+
-		    			'<td><img class="big-image" src="../assets/home/'+ data[loop].picture +'"></td>'+
-		    			'<td>'+ data[loop].title +'</td>'+
-		    			'<td>'+ data[loop].description +'</td>'+
-		    			'<td class="syn-nowrap">'+ data[loop].publishedBy +'</td>'+
-		    			'<td>'+ timeSince(new Date(Date.parse(data[loop].publishedTime))) +'</td>'+
+		    			'<td class="syn-nowrap">#'+ data[loop].idData +'</td>'+
+		    			'<td class="syn-nowrap">'+ data[loop].name +'</td>'+
+		    			'<td>'+ data[loop].status +'</td>'+
+		    			'<td class="text-right">'+ currencyFormat(String(data[loop].total)) +'</td>'+
+		    			'<td class="text-center">'+ timeSince(new Date(Date.parse(data[loop].createdDate))) +'</td>'+
 		    		'</tr>';
+
+		    		if(data[loop].status == "Waiting for payment") unpaidCounter++;
 		    	}
 
 				$('main.parent-admin table tbody').html('').append(html);
 				$('main.parent-admin #totalRecord').html(data.length);
+				$('main.parent-admin #totalUnpaid').html(unpaidCounter);
+				// $('main.parent-admin #totalGuest').html(guestCounter);
 
 				//activator
 				checkboxActivator();
@@ -240,12 +251,12 @@
 					if(checkedArray.length > 0){
 						var confirmation = confirm("Are you sure you want to delete the selected data?");
 						if (confirmation == true) {
-							p_removeData('operation', 'cms_home', checkedArray);
+							p_removeData('order', 'orders', checkedArray);
 
 							r_setCookie('adminPageFilter', '1');
 							r_setCookie('adminAlphaFilter', '');
 							var page = (r_getCookie('adminPageFilter') != "" ? r_getCookie('adminPageFilter'): "1");
-							var data = p_getData('operation', 'cms_home', page);
+							var data = p_getData('order', 'orders', page);
 								data = data.feedData;
 
 							dataGenerator(data);
@@ -255,9 +266,28 @@
 					}
 				});
 
-				$('#manageButton').unbind().on("click", function(){
+				$('#processButton').unbind().on("click", function(){
+					if(checkedArray.length > 0){
+						var confirmation = confirm("Are you sure you want to process the selected data?");
+						if (confirmation == true) {
+							// p_removeData('order', 'orders', checkedArray);
+
+							r_setCookie('adminPageFilter', '1');
+							r_setCookie('adminAlphaFilter', '');
+							var page = (r_getCookie('adminPageFilter') != "" ? r_getCookie('adminPageFilter'): "1");
+							var data = p_getData('order', 'orders', page);
+								data = data.feedData;
+
+							dataGenerator(data);
+						}
+					}else{
+						alert("Please choose record first!");
+					}
+				});
+
+				$('#detailButton').unbind().on("click", function(){
 					if(checkedArray.length == 1 && checkedArray[0] != "0"){
-						window.location.href = base_url + "/admin/formHome.html?q=" + checkedArray[0];
+						window.location.href = base_url + "/admin/orderItems.html?q=" + checkedArray[0];
 					}else{
 						alert("Please choose only one record!");
 					}
