--- a/admin/formProductVariant.html
+++ b/admin/formProductVariant.html
@@ -83,6 +83,9 @@
 			html = html +
 			'<div class="clearfix"></div>' +
 			'<hr/>' +
+			'<div class="col-md-12">'+
+				'<h4 class="text-danger">Note : For a better view, please upload a minimum 500px width image.</h4>' +
+			'</div>'+
 			'<div class="input-frame col-md-3 col-sm-6">'+
 					'<div class="form-group">'+
 						'<label>Front angle</label>'+
